# of_core_fs_pipe

./: CMakeLists.txt  README.md
include/of_core_fs_pipe/: fs_pipe.h
src/: fs_pipe.c
